Update project